# pico_2_uart_tx_bitbang_and_timing

./: CMakeLists.txt  LICENSE  README.md  main.c  timing.h  uart_bitbang.c  uart_bitbang.h
